<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~   Copyright 2023 Einstein Blanco
  ~
  ~   Licensed under the GNU General Public License v3.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       https://www.gnu.org/licenses/gpl-3.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->
<resources>
    <string name="settings">Settings</string>
    <string name="dynamic_color">Dynamic Color</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="theme">Theme</string>
    <string name="available_on_android_12">Available on Android 12+</string>
    <string name="dark_mode">Dark Mode</string>
</resources>